          Release Notes for bweb 1.39.32

2006/12/29
 - Add graphical backup view. See INSTALL to enable it. It's usefull
   for tuning backup.
   NOTES : 
    - You must use brestore -b to initialise database after BackupCatalog job
    - If you have an old installation, you must alter your schema (see INSTALL)

2006/12/14
 - Add pool filter to job form

2006/12/12
 - Add More options button to run_job and Start Date field

2006/12/09
 - Update Copyright

2006/12/05
 - Add html form filter to media view

2006/12/04
 - Add mediatype filter to pool view

2006/11/18
 - Add system log to job log (JobId = 0)

2006/11/18
 - Add debian package	
 - Add cgi/bconsole.pl and BwebConsole package to keep bconsole installation and
   scp usage on admin workstation.

2006/11/16
 - Add Comment and RecyclePool to Media Update

2006/11/13:
 - Use LogId instead of Time in get_log function

2006/10/31:
 - remove Purged and Recycle volume size from total pool size

2006/10/26:
 - Fix javascript sort bug
 - Add french translation for bweb (template_dir must point to bweb/lang/fr/tpl)

2006/10/14:
 - Fix Mysql bug for pool display #639

2006/09/20:
 - Fix SQL query for pool display

2006/09/08:
 - Eject media takes Location as Autochanger Name
 - Email is now sent when request to move media

2006/09/06:
 - Can delete empty location
 - Drop Bconsole::send_cmd_with_drive and use drive= instead
 - Use JavaScript to display Human size and time

2006/08/31:
 - Add FileSet view action
 - Add view fileset to job_zoom

2006/08/26:
 - Add more graphics
   o job avg size/days
   o job avg size/hours
   o ...

2006/08/25:
 - Cleanup
 - Add more graphics
    o job/days
    o job/hours
    o size/days
    o size/hours
    o ... 

2006/08/24:
 - Add Location log to media zoom view 

2006/08/23:
 - Add client/media search box (with regexp)
 - Add menubar instead of plain menu
 - Drop all <button> element (works now with IE)
 - Fix big div
 - Add favicon

2006/08/22: