@@ -52,7 +52,7 @@ use File::Temp qw/tempfile/;
 use Bweb;
 use Bconsole;
 
-my $conf = new Bweb::Config(config_file => '/etc/bweb/config');
+my $conf = new Bweb::Config(config_file => $Bweb::config_file);
 $conf->load();
 
 my $bweb = new Bweb(info => $conf);
